--- a/README
+++ b/README
@@ -7,4 +7,20 @@ Requirements for build:
 3rdparty contained: 
 1. OpenCV 2.4.4-beta for Android
 
+build programs: for example i show on "opengles_test"
+in ${REPO_HOME} in console type next
+1. > cd opengles_test
+2. > mkdir build
+3. > cd build
+4. > android-cmake .. 
+5. > make
+
+then program maked
+
+6. create Android Application in eclipse: for example in ~/workspace/RotatingCube/
+7. > cp -R ../libs ~/workspace/RotatingCube
+8. Edit AndroidManifest.xml in Android application like ${REPO_HOME}/tools/AndroidManifest.xml
+9. Run as Android application... RotatingCube
+10. Enjoy :)
+
 P. S. Sorry for my terrible English ))
